--- a/files/ENGtxt.html
+++ b/files/ENGtxt.html
@@ -1,6 +1,6 @@
 <html><head>
 <style type="text/css">
-P { font: normal 14pt Calibri,Arial; padding-bottom: 20px; }
+P { font: normal 14pt Calibri,Arial,sans-serif; padding-bottom: 20px; }
 /* SPAN { background-color:#ccccff; padding-left:6px; padding-right:6px; color:darkblue; } */
 SPAN { border-bottom: 2px solid orange; }
 HR {  noshade size="5"; border: 0; color: orange; background-color: orange; height: 5px; width: 100%; }
@@ -8,7 +8,7 @@ HR {  noshade size="5"; border: 0; color: orange; background-color: orange; heig
 </head>
 <body>
 
-<TABLE cellPadding="18" cellSpacing="0" border="1" style="font:normal 14pt Calibri,Arial;">
+<TABLE cellPadding="18" cellSpacing="0" border="1" style="font:normal 14pt Calibri,Arial,sans-serif;">
 <colgroup>
     <col width="300px">
     <col width="300px">
@@ -54,8 +54,8 @@ unattainable, appealing, promising, aftermath/outcome, inbuilt bias
 		queer, odd, strange, spooky,
 		the least likely, nothing remotely like
 	</TD><TD valign="top">
-		Overlook, pass over, disdain, deter from, erode,
-		neglect, dodge, ignore, skim through
+		Overlook, disregard, floute, pass over, disdain, deter from, erode,
+		neglect, dodge, ignore, skim through, flip through
 	</TD><TD valign="top">
 		On the contrary, in contrast with, conversely, dissimilarly, apart from.
 		Contrive, devious, under the say/hold, at the behest
@@ -68,7 +68,7 @@ to date, out of date
 	</TD><TD valign="top">
 outdo, bypass, circumvent,
 surpass, surmount,
-overcome, lay down, set forth
+overcome, lay down, set out/forth
 	</TD><TD valign="top">
 despise, hatred, contempt,
 disconsider, detest,
@@ -79,13 +79,13 @@ retaliation, revenge,
 pop up, come up with,
 arise, appear, emerge,
 bump into-stumble on smbd,
-come across
+come, stumble across
 	</TD><TD valign="top">
 alienate, maroon, forsake,
-forgo-refrain from, divert, forestall that by doing this,
+forgo-refrain from, divert, forestall that by doing this, preclude from,
 gather/coalesce, assent/dissent from the view, bestow/confer, trespass/cut into
 	</TD><TD valign="top">
-embodies, embed,
+embodies, embed, enclose,
 encompass, incorporate,
 embodiment
 of betterment,
@@ -105,7 +105,8 @@ underpin, impinge on, provided that
 	</TD></TR>
 	<TR><TD valign="top">
 chat with, mess with, hangout,
-nourish, feed, devour, embroil, entangle
+nourish, feed, devour, embroil, entangle,
+liaise
 	</TD><TD valign="top">
 undergo, scramble through, impute,
 vindicate imputation,
@@ -120,11 +121,11 @@ elaborated, sophisticated, pertinent details
 dispel (a myth, any doubt), debunk, cast doubts, falter in,
 rebut (charges), refute, reject, disprove, deflect,
 revoke, annul, repeal, quash, overrule, reverse,
-dissuade, repel, bounce back
+dissuade, repel, bounce back,resile-ient,
 expel, evacuate, exorcise, elude,
-relinquish, concede
+relinquish, concede, fall back
 	</TD><TD valign="top">
-thorough, accurate, scarcely, hardly, barely;
+thorough ~cursory, accurate, scarcely, hardly, barely;
 dispatch, dispense, apportion, divide, distribute,
 in due course, crowd/flock around
 	</TD><TD valign="top">
@@ -145,6 +146,7 @@ harbour/host life, fence by/with
 	</TD><TD valign="top">
 hardwired, inherent, intrinsic, intimately,
 innermost, essential, immanent, ~extrinsic,
+reliance on, trust in.
 	</TD></TR>
 	<TR><TD valign="top">
 cringe, conceal, hide,
@@ -183,16 +185,17 @@ data drilling, dig/dug, pierce, tunnel,
 penetrate, permiate, bore into
 	</TD><TD valign="top">
 perpetrate, proponent,
-prolific, prominent,
+prolific, prominent, notorious,
 noticeable, conspicuous, pertained to,
 hold, grasp, grab, grip of power/attention
 	</TD><TD valign="top">
 flatter, flirt with,
-sedate, appealing, herald
+sedate, appealing, herald,
+rife, pervasive, ubiquitous, widespread
 	</TD></TR>
 	<TR><TD valign="top">
 perplex, to bewilder, bewilderment, nuisance,
-hassle, inconvenience, annoyance, drawback, deadlock
+hassle, inconvenience, annoyance, drawback/flaw, deadlock/impasse, downside/disadvantage
 	</TD><TD valign="top">
 stray from, deviate, derail,
 deflect the judgment,
@@ -234,7 +237,7 @@ indication, clue,
 conjecture, finding,
 falter, estimation
 	</TD><TD valign="top">
-obey, abide, exert,
+obey, abide, exert, pile on,
 impinge, influence,
 impart, jammed
 	</TD><TD valign="top">
@@ -266,7 +269,8 @@ verge, edge, margin,
 fringe, limit
 	</TD><TD valign="top">
 incidentally, colloquial, alas,
-latency, amid mob, domestic avenues exhausted
+latency, amid mob, domestic avenues exhausted,
+misapprehencion.
 	</TD><TD valign="top">
 fetch, foreshadow,
 prefigure, rest assured or
@@ -285,7 +289,7 @@ turmoil, quarrel,
 ~smooth, ~mild, ~slick
 	</TD><TD valign="top">
 embezzle, loot, rob, defraud, rape,
-divest, dispossess, grab, subterfuge,
+divest, dispossess, grab, subterfuge, ruse,
 plunder, amass, cynical/loutish theft,
 pillage, spoil, lucrative business,
 steal, infringe, breach,
@@ -305,7 +309,9 @@ reflect, grasp
 indict, charge with an
 offense, acquit, redress,
 exonerate, relief, injury,
-inflict, afflict, flawed,
+inflict, afflict,
+flawed, viciate,
+shortcoming, drawback,
 distortion, deficient,
 prejudicial, pejorative
 	</TD></TR>
@@ -348,8 +354,8 @@ wanton, outrageous, unrestrained
 striking, gross,
 severe, rampant,
 flagrant, flamboyant, colourful,
-unparalleled, unrivaled,
-inconceivable, imperceptibly
+unparalleled, unmatched, unprecedented, unrivaled,
+inconceivable, imperceptibly, unapprehensible
 	</TD><TD valign="top">
 point out, stress, highlight,
 outline, emphasise,
@@ -420,15 +426,15 @@ presumably, probably, seemingly, apparently, supposedly
 		to culminate with/top it all, kindle the spark
 	</TD><TD valign="top">
 		draft a letter, file/lodge a request, switch emphasis,
-		preconceived statement, proved pointless, bundle the case,
+		preconceived statement, proved pointless/decisive, bundle the case,
 		broad and purposive interpretation/construed,
-		witty/catty/spiteful remark, defiant, deceptively simple,
+		witty/catty/spiteful/caustic remark, defiant, deceptively simple,
 		deep-seated rancour, resentment, hatred, malice
 	</TD><TD valign="top">
 		conspicuous(-ly), remarkable, noticeable;
 		elevate onto the forefront;
 		values you espouse, embrace, advocate;
-		have a nerve, be impudently aggressive, show effrontery;
+		have a nerve, be impudently/shamelessly aggressive, show effrontery;
 		voluntarily or forcibly, in despondent mood, discouraged;
 		go rogue and gets volatile
 	</TD></TR>
@@ -602,7 +608,7 @@ Under a less <span>invasive observation</span>, the act of measurement introduce
 The comprehensibility of its nature is not <span>mere metaphor</span>, which opens a full <span>realm of</span> possibility, but which also can open or refute this <span>elegant paradigm</span>.</p><p>
 A <span>clue</span> to resolving this <span>puzzle</span> came <span>without excessively hypothesizing</span>, <span>riddled</span> (abundant in) with <span>violent and dramatic</span> events.</p><p>
 Informational <span>enrichment</span> might be <span>perceived</span> as <span>tempting</span> as violating <span>pivotal</span> moments.</p><p>
-When <span>misguided</span>, you anyway have to <span>surpass the obstacle</span>.</p><p>
+When <span>misguided</span>, you anyway have to <span>surpass the obstacle</span> and <span>hurdles</span>.</p><p>
 As <span>yet undetected</span>, or else the explanations are not yet plausible.</p><p>
 <span>Dressed in that much complexity to get unobvious</span>, this <span>encountered</span> a certain amount of intimidation.</p><p>
 It <span>confounds</span> intuition: although <span>fluctuating randomly</span>, in wavy lines, it appears to <span>place strong restrictions</span>.</p><p>
@@ -829,7 +835,7 @@ It <span>shapes the way it manifests</span>.
 <HR/>
 <p>
 To <span>ascribe</span> something <span>to</span> somebody (to credit or to assign).</p><p>
-The shallow/superficial (lacking depth). <span>Based upon the foregoing</span>...</p><p>
+The shallow/superficial (lacking depth), on the surface. <span>Based upon the foregoing</span>...</p><p>
 They are good in <span>spotting</span> (exploitable) vulnerabilities.</p><p>
 <span>Cheat with impunity</span>...with <span>exemption of punishment</span>.</p><p>
 This <span>defies common sense</span>. <span>Bitter taste</span>...</p><p>
@@ -850,7 +856,7 @@ Yoke (jug), used <span>chiefly</span> as <span>draft animal</span> (beast of bur
 <span>Downcast</span> the eyes... Feel downcast/depressed. His is a downcast. In the beginning the area was settled by outcasts, adventurers, and felons. Rejected/outcast.</p><p>
 It <span>shields</span> his ignorance. To <span>expose views about</span> the list of <span>banned books</span>.</p><p>
 <span>Exert influence</span>, <span>reluctantly dragged by hair</span>. An <span>inveterate</span> gambler.</p><p>
-<span>Notwithstanding the laws of physics</span>, he <span>swings</span> (swung) the machinery into motion against the victims. To <span>denounce</span> him to the inquisition. <span>Denunciation</span>.</p><p>
+<span>Notwithstanding the laws of physics</span>, he <span>swings</span> (swung)(<span>budged</span>, stirred) the machinery into motion against the victims. To <span>denounce</span> him to the inquisition. <span>Denunciation</span>.</p><p>
 <span>Deep-seated rancour</span> - <span>resentiment</span>, malice, hatred.</p><p>
 We <span>endear</span> ourselves <span>with</span> this idea.</p><p>
 The doctor <span>enjoined</span> (prescribed) a strict diet. The court enjoins (restrict) by an <span>injunction</span>. To <span>weigh the arguments</span>.</p><p>
@@ -1123,7 +1129,7 @@ Advantages and quirks (peculiar behaviour), joy and <span>grief</span>. A final 
 What's the <span>prophetic</span> significance if this omen? The <span>stem</span> bears the <span>leaves</span>.
 
 <BR/><BR/>
-<table cellPadding="8" cellSpacing="0" width="600" style="border:1 solid orange;font: normal 14pt Calibri,Arial;">
+<table cellPadding="8" cellSpacing="0" width="600" style="border:1 solid orange;font: normal 14pt Calibri,Arial,sans-serif;">
 <TR><TD>VIOLATION OF ARTICLE 6 OF THE CONVENTION</TD></TR>
 <TR><TD bgColor="#ffff99">(a)	Relevant Principles of Law</TD></TR>
 <TR><TD>(1) Judicial Independence and Impartiality</TD></TR>
@@ -1696,6 +1702,23 @@ Carrot and stick. <span>Gain ground</span>, be in progress.<BR/>
 	A display of unnecessary or excessive excitement, activity, or interest : I don't know what all the <span>fuss</span> is about.<BR/>
 	The <span>subterfugea</span> is a criminal scheme or stratagem employed to defraud.<BR/>
 	Jusrice <span>devoid of</span> independence.<BR/>
+	Time presses. Stubbornly optimistic.<BR/>
+	The resemblance isn't accidental/<BR/>
+	I have to reprobate this ab initio.<BR/>
+	Insofar as the law permits.<BR/>
+	I'm still fuzzy on it.<BR/>
+	The court <span>flouted</span> the rules... openely disregarded.<BR/>
+	<span>Lex loci damni</span> refers to the law of the place where the injury occurs. In other words, if an injury appears in another country, the laws of that 	country govern.<BR/>
+</p>
+<p>
+	To <span>pile</span> pressure over...<BR/>
+	There is <span>no margin</span> for errors.<BR/>
+	This is <span>beyond my grasp</span>.<BR/>
+	Turn the tide, slaw the pace, mount the case.<BR/>
+	Give a <span>cursory</span> (not thorough) glance at the wording….<BR/>
+	Room for manoeuvre, boiling point.<BR/>
+	There is something eluding you.<BR/>
+	The solution lies in the treatment.<BR/>
 </p>
 </body>
 </html>
