--- a/files/pros.html
+++ b/files/pros.html
@@ -82,9 +82,11 @@ radix: <INPUT id="radix" type="text" style="width:40" value="12" onChange="W.dim
 fonts: <SELECT id='fSelect' style='width:70px; background-color:white; border:1px solid grey; outline:none;' onChange="W.st.font = W.vl('fSelect')">
 		<OPTION value='normal 13pt serif' selected>Serif</OPTION>
 		<OPTION value='normal 11pt sans-serif'>Sans</OPTION>
-		<OPTION value='normal 11pt "Courier New",Courier,monospaced'>Courier</OPTION>
+		<OPTION value='normal 11pt "Courier New",Courier,Monospace'>Courier</OPTION>
 		<OPTION value='normal 11pt Arial,sans-serif'>Arial</OPTION>
 		<OPTION value='normal 10pt Verdana,sans-serif'>Verdana</OPTION>
+		<OPTION value='normal 11pt "Lucida Console",Monospace'>Lucida</OPTION>
+		<OPTION value='normal 12pt Georgia,serif'>Georgia</OPTION>
 	</SELECT>
 <INPUT type="button" value="Renew!" style='background-color:white' onClick="W.cauta()"/>
 <INPUT type="button" value="Show!" style='background-color:white' onClick="show()"/>
