--- a/files/ENGtxt.html
+++ b/files/ENGtxt.html
@@ -18,8 +18,8 @@ function Send() {
 function Receive() {
 	try {
 		var xmlhttp = window.XMLHttpRequest?(new XMLHttpRequest()):(new ActiveXObject("Microsoft.XMLHTTP"));
-		xmlhttp.open('GET', 'get', false);
-		xmlhttp.send('');
+		xmlhttp.open('GET', 'receive', false);
+		xmlhttp.send('x');
 		document.getElementById('Continut').innerHTML = xmlhttp.responseText;
 	} catch(e) { alert(e.message); return 'Error!'; }
 }
