--- a/files/ENGtxt.html
+++ b/files/ENGtxt.html
@@ -6,7 +6,7 @@ HR {  noshade size="5"; border: 0; color: orange; background-color: orange; heig
 </style>
 <script type="text/javascript">
 
-function Send() {
+function Save() {
 	try {
 		var xmlhttp = window.XMLHttpRequest?(new XMLHttpRequest()):(new ActiveXObject("Microsoft.XMLHTTP"));
 		xmlhttp.open('POST', 'save', false);
