--- a/index.html
+++ b/index.html
@@ -2,17 +2,28 @@
 <HEAD>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <title>::: Index File :::</title>
+<STYLE>
+.hl { font: normal 14pt "Luicda Console", monospace; text-decoration: none; color: black; }
+.hl:hover { background: black; color: white; }
+</STYLE>
 </HEAD>
-<BODY>
+<BODY style='font: bold 14pt "Luicda Console", monospace;'>
 
+Styling pages:<br/>
 <ul>
-	<li><a href="files/ProEmail.html">Pro Email</a></li>
-	<li><a href="files/pros.html">Pro Style Email</a></li>
-	<li><a href="files/prostyle.html">Pro Style Extended Email</a></li>
-	<li><a href="files/ProEmailAuto.html">Auto Pro Email</a></li>
-	<li><a href="files/ENGtxt.html">Eng Text</a></li>
+	<li><a class='hl' href="files/ProEmail.html">Pro Email (simple)</a></li>
+	<li><a class='hl' href="files/pros.html">Pro Style Email</a></li>
+	<li><a class='hl' href="files/prostyle.html">Pro Style Extended Email</a></li>
+	<li><a class='hl' href="files/ProEmailAuto.html">Auto Pro Email Styling</a></li>
+	<li><a class='hl' href="files/ENGtxt.html">English (Text)</a></li>
 </ul>
-	
+Cloud pages:<br/>
+<ul>
+	<li><a class='hl' href="http://the-postviorel.rhcloud.com">Red Hat (Linux) OpenShift</a></li>
+	<li><a class='hl' href="http://companywf.appspot.com/">Company WorkFlow, Google AppEngine Cloud/Java</a></li>
+	<li><a class='hl' href="http://specialposting.appspot.com/">Special Posting, Google AppEngine Cloud/Java</a></li>
+	<li><a class='hl' href="https://googledrive.com/host/0B9SVB8e71kt2MmpNZkNFZFhHQjA/">Air5 Project, Google Apps</a></li>
+</ul>
 
 </BODY>
 </HTML>
