--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <HTML>
 <HEAD>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
-<title>::: Index File :::</title>
+<title>Index File</title>
+<link rel="shortcut icon" href="files/favicon.ico" type="image/x-icon" />
 <STYLE>
-.hl { font: normal 14pt "Luicda Console", monospace; text-decoration: none; color: black; }
+.hl { font: normal 14pt "Luicda Console", monospace; text-decoration: none; color: black; padding-right:6px; padding-left:6px; }
 .hl:hover { background: black; color: white; }
 </STYLE>
 </HEAD>
