--- a/files/ENGtxt.html
+++ b/files/ENGtxt.html
@@ -3,7 +3,8 @@
 P { font: normal 14pt Ubuntu,Calibri,sans-serif; padding-bottom: 20px; }
 i { border-bottom: 2px solid orange; font-style: normal; }
 HR {  noshade size="5"; border: 0; color: orange; background-color: orange; height: 5px; width: 100%; }
-INPUT[type=button] { padding: 8px; background-color: white; border:1px solid orange; font: normal 11pt Arial, sans-serif; width: 120px; }
+INPUT[type=button] { padding: 8px; background-color: white; border:1px solid lightgrey; font: normal 11pt Arial, sans-serif; width: 120px; }
+INPUT[type=button]:hover { border:1px solid orange; }
 </style>
 <script type="text/javascript">
 
@@ -12,7 +13,7 @@ function Save() {
 		
 		var b = document.getElementById('out');
 		b.style.backgroundColor = 'orange';
-		b.innerHTML = 'Saving...';
+		b.value = 'Saving...';
 		
 		var xmlhttp = window.XMLHttpRequest?(new XMLHttpRequest()):(new ActiveXObject("Microsoft.XMLHTTP"));
 		xmlhttp.open('POST', 'save', false);
@@ -20,8 +21,8 @@ function Save() {
 		xmlhttp.send(msg);
 		
 		b.style.backgroundColor = 'lightgreen';
-		b.innerHTML = xmlhttp.responseText;
-		setTimeout("document.getElementById('out').innerHTML='Save Content';document.getElementById('out').style.backgroundColor='';", 2000);
+		b.value = xmlhttp.responseText;
+		setTimeout("document.getElementById('out').value='Save Content';document.getElementById('out').style.backgroundColor='';", 2000);
 		
 	} catch(e) { alert(e.message); return 'Error!'; }
 }
