--- a/files/ENGtxt.html
+++ b/files/ENGtxt.html
@@ -4,7 +4,7 @@ P { font: normal 14pt Ubuntu,Calibri,sans-serif; padding-bottom: 20px; }
 i { border-bottom: 2px solid orange; font-style: normal; }
 HR {  noshade size="5"; border: 0; color: orange; background-color: orange; height: 5px; width: 100%; }
 INPUT[type=button] { padding: 8px; background-color: white; border:1px solid lightgrey; font: normal 11pt Arial, sans-serif; width: 120px; }
-INPUT[type=button]:hover { border:1px solid orange; }
+INPUT[type=button]:hover { border:1px solid red; }
 </style>
 <script type="text/javascript">
 
@@ -12,8 +12,7 @@ function Save() {
 	try {
 		
 		var b = document.getElementById('out');
-		b.style.backgroundColor = 'orange';
-		b.value = 'Saving...';
+		window.setTimeout("document.getElementById('out').value='Saving...';document.getElementById('out').style.backgroundColor='orange';", 100);
 		
 		var xmlhttp = window.XMLHttpRequest?(new XMLHttpRequest()):(new ActiveXObject("Microsoft.XMLHTTP"));
 		xmlhttp.open('POST', 'save', false);
@@ -22,7 +21,7 @@ function Save() {
 		
 		b.style.backgroundColor = 'lightgreen';
 		b.value = xmlhttp.responseText;
-		setTimeout("document.getElementById('out').value='Save Content';document.getElementById('out').style.backgroundColor='';", 2000);
+		window.setTimeout("document.getElementById('out').value='Save Content';document.getElementById('out').style.backgroundColor='';", 2000);
 		
 	} catch(e) { alert(e.message); return 'Error!'; }
 }
