--- a/files/ENGtxt.html
+++ b/files/ENGtxt.html
@@ -42,5 +42,6 @@ function Receive( fl ) {
 <DIV id='Continut' contentEditable='true'></DIV>
 <hr>
 <INPUT id='out' type='button' value='Save Content' onClick='Save()'/>
+<a href='down'>Download</a>
 </body>
 </html>
