--- a/files/ENGtxt.html
+++ b/files/ENGtxt.html
@@ -36,12 +36,9 @@ function Receive( fl ) {
 
 </head>
 <body onLoad='Receive(true)'>
-<INPUT type='button' value='Download' onClick='Receive(false)'/>
-<INPUT type='button' value='Refresh' onClick='Receive(true)'/>
-<hr>
 <DIV id='Continut' contentEditable='true'></DIV>
 <hr>
 <INPUT id='out' type='button' value='Save Content' onClick='Save()'/>
-<a href='down'>Download</a>
+<a href='down' style='font:normal 11pt Arial, sans-serif;'>[ Download eng.txt ]</a>
 </body>
 </html>
