--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ Styling pages:<br/>
 	<li><a class='hl' href="files/pros.html">Pro Style Email</a></li>
 	<li><a class='hl' href="files/prostyle.html">Pro Style Extended Email</a></li>
 	<li><a class='hl' href="files/ProEmailAuto.html">Auto Pro Email Styling</a></li>
+	<li><a class='hl' href="files/rtf.html">Rich Text Editor</a></li>
 	<li><a class='hl' href="files/ENGtxt.html">English (Text)</a></li>
 </ul>
 Cloud pages:<br/>
